Fixes and improvements
- improvements to accessibility

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,3 +29,9 @@ footer {
   background-color: $header-color;
   color: #fff;
 }
+
+#selection {
+  background-color: $header-color;
+  text-align: left;
+  border: none;
+}
